replace flex-layout with cdk breakpoint observable

--- a/src/app/dashboard1/dashboard/dashboard.component.html
+++ b/src/app/dashboard1/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 </mat-toolbar>
 <div style="margin:10px;">
   <div fxLayout.gt-xs="row wrap" fxLayout.xs="column" *ngIf="stats$ | async as stats">
-    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.gt-sm="25" style="padding:10px;">
+    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="50" fxFlex.gt-md="25" style="padding:10px;">
       <mat-card>
         <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
           <mat-icon>link</mat-icon>
@@ -20,7 +20,7 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.gt-sm="25" style="padding:10px;">
+    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="50" fxFlex.gt-md="25" style="padding:10px;">
       <mat-card>
         <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
           <mat-icon>list_alt</mat-icon>
@@ -35,7 +35,7 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.gt-sm="25" style="padding:10px;">
+    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="50" fxFlex.gt-md="25" style="padding:10px;">
       <mat-card>
         <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
           <mat-icon>people</mat-icon>
@@ -50,7 +50,7 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.gt-sm="25" style="padding:10px;">
+    <div fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="50" fxFlex.gt-md="25" style="padding:10px;">
       <mat-card>
         <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
           <mat-icon>list</mat-icon>
