--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,8 +1,9 @@
 <app-page>
+	<canvas *ngIf="showConfetti" id="confetti-holder"></canvas>
 	<div id="page-wrapper">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">{{ 'Support' | translate }} <a routerLink="/accounts/trackeraegis">trackeraegis</a></h1>
+				<h1 class="page-header">{{ 'Support' | translate }} <a routerLink="/accounts/{{contract}}">{{contract}}</a></h1>
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
@@ -65,15 +66,18 @@
 
 						<form class="ng-untouched ng-pristine ng-invalid">
 							<div class="input-group">
-								<input aria-label="..." [(ngModel)]="amount" class="form-control ng-untouched ng-pristine ng-invalid" name="msg" placeholder="5 EOS" required type="text">
+								<div class="input-group">
+									<span class="input-group-addon">EOS</span>
+									<input aria-label="..." [(ngModel)]="amount" class="form-control ng-untouched ng-pristine ng-invalid" name="msg" placeholder="5" required type="text" [disabled]="!isLogged() || alive">
+								</div>
 								<div class="input-group-btn">
-									<button (click)="support(amount)" class="btn btn-primary" type="submit">Support 🚀</button>
+									<button (click)="support(amount)" class="btn btn-primary" id="btnSupport" type="submit" [disabled]="!isLogged() || alive">Support 🚀</button>
 								</div>
 							</div>
 						</form>
 						<div style="margin-top: 20px; ">
 							<form class="ng-untouched ng-pristine ng-invalid">
-								<button (click)="refund()" class="btn btn-default" style="width: 100%" type="submit">Refund ✂️</button>
+								<button (click)="refund()" class="btn btn-default" style="width: 100%" type="submit" [disabled]="!isLogged() || alive">Refund ✂️</button>
 							</form>
 						</div>
 					</div>
