--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -39,15 +39,21 @@
 								<div id="collapseRoadmap" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
 									<div class="panel-body">
 										<ul>
+											<li>Migration to Material design</li>
+											<li>Multiple themes (dark mode)</li>
+											<li>Curated list of other external tools</li>
 											<li>SQL Plugin maintenance</li>
 											<li>Contract verification</li>
-											<li>Token curation</li>
-											<li>Allow execute code from ABI</li>
+											<li>Improve translations</li>
+											<li>Inline actions tracking</li>
 											<li>Charts</li>
+											<li>RAM info</li>
+											<li>Token lists</li>
+											<li>Allow execute code from ABI</li>
 											<li>Notifications / Email Alerts</li>
 											<li>IPFS search</li>
-											<li>DEX search</li>
 											<li>API usable for third parties</li>
+											<li>DEX search</li>
 										</ul>
 									</div>
 								</div>
