--- a/src/app/producer1/producer/producer.component.html
+++ b/src/app/producer1/producer/producer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <h1 class="mat-headline">
     {{ 'Producer' | translate }}
-    <span *ngIf="account$ | async as account">{{account.name}}</span>
+    <span *ngIf="producer$ | async as producer">{{producer.account?.name}}</span>
   </h1>
 </mat-toolbar>
 <div>
@@ -17,16 +17,16 @@
           <td>{{ 'Name' | translate }}:</td>
           <td>{{producer.bpJson.org.candidate_name}}</td>
         </tr>
-        <tr *ngIf="account$ | async as account">
+        <tr *ngIf="producer.account">
           <td>{{ 'Account' | translate }}:</td>
-          <td>{{account.name}}
-            <i *ngIf="validated" class="fa fa-check" style="color: green" aria-hidden="true"></i>
+          <td>{{producer.account.name}}
+            <mat-icon *ngIf="producer.validated" style="color: green">check</mat-icon>
           </td>
         </tr>
         <tr *ngIf="producer">
           <td>{{ 'Public Key' | translate }}:</td>
           <td>{{producer.producer_key}}
-            <i *ngIf="validated" class="fa fa-check" style="color: green" aria-hidden="true"></i>
+            <mat-icon *ngIf="producer.validated" style="color: green">check</mat-icon>
           </td>
         </tr>
         <tr *ngIf="producer">
@@ -47,5 +47,57 @@
         </tr>
       </table>
     </div>
+  </mat-expansion-panel>
+  <mat-expansion-panel expanded="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{ 'Nodes' | translate }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div *ngIf="producer$ | async as producer">
+      <agm-map [latitude]="producer.location.latitude" [longitude]="producer.location.longitude" [zoom]="15" mapTypeId="roadmap"
+        style="width:100%;height:300px"></agm-map>
+    </div>
+  </mat-expansion-panel>
+  <mat-expansion-panel expanded="false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{ 'BlockchainRawData' | translate }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div *ngIf="producer$ | async as producer">
+      <prettyjson [obj]="producer.account?.raw"></prettyjson>
+    </div>
+  </mat-expansion-panel>
+  <mat-expansion-panel expanded="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{ 'Votes' | translate }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-table [dataSource]="votes$ | async">
+      <table mat-table [dataSource]="votes$ | async">
+        <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+        <ng-container matColumnDef="account">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Account' | translate }}</th>
+          <td mat-cell *matCellDef="let vote">
+            <a [routerLink]="['../../account',vote.account]">{{vote.account}}</a>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="staked">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Staked' | translate }}</th>
+          <td mat-cell *matCellDef="let vote">
+            {{vote.staked | number}} EOS
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="votes">
+          <th mat-header-cell *matHeaderCellDef>{{ 'Number of BPs' | translate }}}</th>
+          <td mat-cell *matCellDef="let vote">
+            {{vote.votes.length}}
+          </td>
+        </ng-container>
+      </table>
+    </app-table>
   </mat-expansion-panel>
 </div>
