add custom themes

--- a/src/app/shared/masterpage/header/header.component.html
+++ b/src/app/shared/masterpage/header/header.component.html
@@ -4,7 +4,8 @@
       <mat-icon>menu</mat-icon>
     </button>
     <a class="brand" routerLink="/v1">
-      <img [src]="logoUrl" />{{ appName | translate }}
+      <img [src]="logoUrl" />
+      <span>{{ appName | translate }}</span>
     </a>
   </div>
   <app-search (onSearchExpanded)="searchExpanded = $event" [ngClass]="searchExpanded ? 'search-expanded' : 'search-collapsed'"></app-search>
