--- a/src/app/producer1/producers/producers.component.html
+++ b/src/app/producer1/producers/producers.component.html
@@ -5,7 +5,7 @@
 </mat-toolbar>
 <div style="margin:10px;">
   <div class="vote-progress" *ngIf="chainStatus$ | async as chainStatus">
-    <mat-progress-bar mode="determinate" [value]="chainStatus.chainPercentage"></mat-progress-bar>
+    <mat-progress-bar color="accent" mode="determinate" [value]="chainStatus.chainPercentage"></mat-progress-bar>
     <span>Votes: {{ (chainStatus.chainNumber) | number }} ({{chainStatus.chainPercentage}}%)</span>
   </div>
   <app-table [dataSource]="producers$ | async" [enablePager]="false">
