--- a/src/app/shared/masterpage/header/header.component.html
+++ b/src/app/shared/masterpage/header/header.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button fxHide.gt-sm (click)="onMenuToggle.emit()">
       <mat-icon>menu</mat-icon>
     </button>
-    <a class="brand" routerLink="/v1">
+    <a class="brand" routerLink="/">
       <img [src]="logoUrl" />
       <span>{{ appName | translate }}</span>
     </a>
