more dashboard components

--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -30,6 +30,5 @@
   </ng-container>
 </ng-container>
 <ng-template #loading>
-  <mat-progress-spinner color="primary" mode="indeterminate" value="50">
-  </mat-progress-spinner>
+  <app-spinner></app-spinner>
 </ng-template>
