--- a/src/app/dashboard1/dashboard/dashboard.component.html
+++ b/src/app/dashboard1/dashboard/dashboard.component.html
@@ -7,70 +7,10 @@
   <app-dashboard-stats></app-dashboard-stats>
   <div fxLayout.gt-md="row" fxLayout="column">
     <div fxFlex style="padding:10px;">
-      <div fxLayout="row" fxLayoutAlign="space-between center">
-        <h3 class="mat-subheading-2">{{ 'Blocks' | translate }}</h3>
-        <a mat-button [routerLink]="['./blocks']">{{ 'ViewAll' | translate }}</a>
-      </div>
-      <app-table [dataSource]="blocks$ | async" [enablePager]="false">
-        <table mat-table [dataSource]="blocks$ | async">
-          <tr mat-header-row *matHeaderRowDef="blocksColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: blocksColumns;"></tr>
-          <ng-container matColumnDef="blockNumber">
-            <th mat-header-cell *matHeaderCellDef>#</th>
-            <td mat-cell *matCellDef="let block">
-              <a [routerLink]="['./blocks',block.blockNumber]">{{block.blockNumber}}</a>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="timestamp">
-            <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
-            <td mat-cell *matCellDef="let block">
-              {{block.timestamp * 1000 | date:'medium'}}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="producer">
-            <th mat-header-cell *matHeaderCellDef>{{ 'Producer' | translate }}</th>
-            <td mat-cell *matCellDef="let block">
-              <a [routerLink]="['./producers',block.producer]">{{block.producer}}</a>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="numTransactions">
-            <th mat-header-cell *matHeaderCellDef>{{ 'Tx' | translate }}</th>
-            <td mat-cell *matCellDef="let block">
-              {{block.numTransactions}}
-            </td>
-          </ng-container>
-        </table>
-      </app-table>
+      <app-dashboard-blocks></app-dashboard-blocks>
     </div>
     <div fxFlex style="padding:10px;">
-      <div fxLayout="row" fxLayoutAlign="space-between center">
-        <h3 class="mat-subheading-2">{{ 'Transactions' | translate }}</h3>
-        <a mat-button [routerLink]="['./transactions']">{{ 'ViewAll' | translate }}</a>
-      </div>
-      <app-table [dataSource]="transactions$ | async" [enablePager]="false">
-        <table mat-table [dataSource]="transactions$ | async">
-          <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>#</th>
-            <td mat-cell *matCellDef="let transaction">
-              <a [routerLink]="['./transactions',transaction.id]">{{transaction.id | slice:0:26}}...</a>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="createdAt">
-            <th mat-header-cell *matHeaderCellDef>{{ 'Time' | translate }}</th>
-            <td mat-cell *matCellDef="let transaction">
-              {{transaction.createdAt * 1000 | date:'medium'}}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="numActions">
-            <th mat-header-cell *matHeaderCellDef>{{ 'Actions' | translate }}</th>
-            <td mat-cell *matCellDef="let transaction">
-              {{transaction.numActions}}
-            </td>
-          </ng-container>
-        </table>
-      </app-table>
+      <app-dashboard-transactions></app-dashboard-transactions>
     </div>
   </div>
 </div>
