--- a/src/app/block1/blocks/blocks.component.html
+++ b/src/app/block1/blocks/blocks.component.html
@@ -31,7 +31,7 @@
       <ng-container matColumnDef="producer">
         <th mat-header-cell *matHeaderCellDef>{{ 'Producer' | translate }}</th>
         <td mat-cell *matCellDef="let block">
-          <a [routerLink]="['../../producers',block.producer]">{{block.producer}}</a>
+          <a [routerLink]="['../producers',block.producer]">{{block.producer}}</a>
         </td>
       </ng-container>
       <ng-container matColumnDef="numTransactions">
