--- a/src/app/dashboard1/dashboard/blocks/blocks.component.html
+++ b/src/app/dashboard1/dashboard/blocks/blocks.component.html
@@ -25,7 +25,7 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="numTransactions">
-      <th mat-header-cell *matHeaderCellDef>{{ 'Tx' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef>{{ 'Txns' | translate }}</th>
       <td mat-cell *matCellDef="let block">
         {{block.numTransactions}}
       </td>
