--- a/src/app/transaction1/transactions/transactions.component.html
+++ b/src/app/transaction1/transactions/transactions.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <h1 class="mat-headline">
-    <a routerLink=".">{{ 'Transactions' | translate }}</a>
+    {{ 'Transactions' | translate }}
   </h1>
 </mat-toolbar>
 <div style="margin:10px;">
