--- a/src/material.scss
+++ b/src/material.scss
@@ -9,3 +9,10 @@
   word-break: break-word;
   min-width: 100px;
 }
+
+.mat-headline,
+.mat-title,
+.mat-subheading-2,
+.mat-subheading-1 {
+  margin: 0;
+}
