--- a/src/app/account1/account/account.component.html
+++ b/src/app/account1/account/account.component.html
@@ -1,169 +1,40 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <h1 class="mat-headline">
     {{ 'Account' | translate }} {{name$ | async}}
   </h1>
 </mat-toolbar>
-<div>
-  <mat-expansion-panel expanded="true">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{ 'Account' | translate }}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="table-responsive" *ngIf="account$ | async as account">
-      <table class="table table-striped">
-        <tr>
-          <td>{{ 'Name' | translate }}:</td>
-          <td>{{account.name}}</td>
-        </tr>
-        <tr>
-          <td>{{ 'CreatedAt' | translate }}:</td>
-          <td>{{account.createdAt * 1000 | date:'medium'}}</td>
-        </tr>
-        <tr>
-          <td>{{ 'UpdatedAt' | translate }}:</td>
-          <td>{{account.updatedAt * 1000 | date:'medium'}}</td>
-        </tr>
-        <tr *ngIf="account.balance != null">
-          <td>{{ 'Balance' | translate }}:</td>
-          <td>{{account.balance | number:'1.0-4' }} EOS</td>
-        </tr>
-        <tr *ngIf="account.tokens">
-          <td>{{ 'Other tokens' | translate }}:</td>
-          <td>
-            <div *ngFor="let token of account.tokens">{{token.balance}}</div>
-          </td>
-        </tr>
-        <tr *ngIf="account.raw">
-          <td>{{ 'RAM' | translate }}:</td>
-          <td>{{account.raw.ram_usage | toKB | number:'1.0-2'}} KB / {{account.raw.ram_quota | toKB | number:'1.0-2'}} KB
-            <span *ngIf="account.ramPrice">({{(account.ramPrice * account.raw.ram_quota) | number:'1.0-4'}} EOS)</span>
-          </td>
-        </tr>
-        <tr *ngIf="account.raw">
-          <td>{{ 'CPU' | translate }}:</td>
-          <td>
-            Staked: {{(account.raw.cpu_weight / 10000) | number:'1.0-4'}} EOS
-            <br /> Used: {{account.raw.cpu_limit.used | number}} µs
-            <br /> Available: {{account.raw.cpu_limit.available | number}} µs
-            <br /> Max: {{account.raw.cpu_limit.max | number}} µs
-          </td>
-        </tr>
-        <tr *ngIf="account.raw">
-          <td>{{ 'NET' | translate }}:</td>
-          <td>
-            Staked: {{(account.raw.net_weight / 10000) | number:'1.0-4'}} EOS
-            <br /> Used: {{(account.raw.net_limit.used) | toKB | number:'1.0-2'}} KB
-            <br /> Available: {{(account.raw.net_limit.available) | toKB | number:'1.0-2'}} KB
-            <br /> Max: {{(account.raw.net_limit.max) | toKB | number:'1.0-2'}} KB
-          </td>
-        </tr>
-        <tr *ngIf="account.raw && account.balance != null && account.ramPrice">
-          <td>{{ 'Value' | translate }}:</td>
-          <td>
-            {{((account.raw.cpu_weight / 10000) + (account.raw.net_weight / 10000) + account.balance + (account.ramPrice * account.raw.ram_quota))
-            | number:'1.0-4'}} EOS
-            <span *ngIf="eosPrice$ | async as eosPrice">(${{(((account.raw.cpu_weight / 10000) + (account.raw.net_weight / 10000) + account.balance + (account.ramPrice
-              * account.raw.ram_quota)) * eosPrice) | number:'1.0-2'}})</span>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </mat-expansion-panel>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{ 'Contract' | translate }}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <prettyjson [obj]="account.abi" *ngIf="account$ | async as account"></prettyjson>
-  </mat-expansion-panel>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{ 'BlockchainRawData' | translate }}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <prettyjson [obj]="account.raw" *ngIf="account$ | async as account"></prettyjson>
-  </mat-expansion-panel>
-  <mat-accordion>
-    <mat-expansion-panel *ngFor="let table of (accountTables$ | async)">
-      <mat-expansion-panel-header>
-        {{ 'Table' | translate }} - {{table.name}}
-      </mat-expansion-panel-header>
-      <div *ngFor="let row of table.rows">
-        <prettyjson [obj]="row"></prettyjson>
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-  <mat-expansion-panel expanded="true">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{ 'Actions Received' | translate }}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="table-responsive" *ngIf="accountActionsReceived$ | async as actionsReceived">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>{{ 'Account' | translate }}</th>
-            <th>{{ 'Timestamp' | translate }}</th>
-            <th>{{ 'Transaction' | translate }}</th>
-            <th>{{ 'Name' | translate }}</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let action of actionsReceived">
-            <td>
-              <a [routerLink]="['../../actions',action.id]">{{action.id}}</a>
-            </td>
-            <td>
-              <a [routerLink]="['../../accounts',action.account]">{{action.account}}</a>
-            </td>
-            <td>{{action.createdAt * 1000 | date:'medium'}}</td>
-            <td>
-              <a [routerLink]="['../../transactions',action.transaction]">{{action.transaction|slice:0:16}}...</a>
-            </td>
-            <td>{{action.name}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </mat-expansion-panel>
-  <mat-expansion-panel expanded="true">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{ 'Actions Sent' | translate }}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="table-responsive" *ngIf="accountActionsSent$ | async as actionsSent">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>{{ 'Account' | translate }}</th>
-            <th>{{ 'Timestamp' | translate }}</th>
-            <th>{{ 'Transaction' | translate }}</th>
-            <th>{{ 'Name' | translate }}</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let action of actionsSent">
-            <td>
-              <a [routerLink]="['../../actions',action.id]">{{action.id}}</a>
-            </td>
-            <td>
-              <a [routerLink]="['../../accounts',action.account]">{{action.account}}</a>
-            </td>
-            <td>{{action.createdAt * 1000 | date:'medium'}}</td>
-            <td>
-              <a [routerLink]="['../../transactions',action.transaction]">{{action.transaction|slice:0:16}}...</a>
-            </td>
-            <td>{{action.name}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </mat-expansion-panel>
-</div>
+<mat-tab-group color="primary" dynamicHeight="true" *ngIf="account$ | async as account; else loading">
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon style="margin-right:5px;">info</mat-icon>
+      {{ 'Account Information' | translate }}
+    </ng-template>
+    <app-account-information [account]="account" [eosPrice]="eosPrice$ | async"></app-account-information>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon style="margin-right:5px;">code</mat-icon>
+      {{ 'Contract' | translate }}
+    </ng-template>
+    <prettyjson [obj]="account.abi" *ngIf="account.abi"></prettyjson>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon style="margin-right:5px;">code</mat-icon>
+      {{ 'BlockchainRawData' | translate }}
+    </ng-template>
+    <prettyjson [obj]="account.raw" *ngIf="account.raw"></prettyjson>
+  </mat-tab>
+  <mat-tab [disabled]="account.abi?.tables?.length === 0">
+    <ng-template mat-tab-label>
+      <mat-icon style="margin-right:5px;">table_chart</mat-icon>
+      {{ 'Tables' | translate }}
+    </ng-template>
+    <ng-template matTabContent>
+      <app-account-tables [account]="account"></app-account-tables>
+    </ng-template>
+  </mat-tab>
+</mat-tab-group>
+<ng-template #loading>
+  <app-spinner></app-spinner>
+</ng-template>
