--- a/src/app/account1/accounts/accounts.component.html
+++ b/src/app/account1/accounts/accounts.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <h1 class="mat-headline">
-    <a routerLink=".">{{ 'Accounts' | translate }}</a>
+    {{ 'Accounts' | translate }}
   </h1>
 </mat-toolbar>
 <div style="margin:10px;">
