--- a/src/app/shared/masterpage/sidenav/sidenav.component.html
+++ b/src/app/shared/masterpage/sidenav/sidenav.component.html
@@ -1,7 +1,12 @@
 <mat-nav-list>
-  <mat-list-item *ngFor="let nav of navs">
-    <mat-icon matListIcon>{{nav.icon}}</mat-icon>
-    <a *ngIf="!nav.external" matLine [routerLink]="nav.link" routerLinkActive="active">{{nav.name}}</a>
-    <a *ngIf="nav.external" matLine [href]="nav.link" target="_blank">{{nav.name}}</a>
-  </mat-list-item>
+  <ng-container *ngFor="let nav of navs">
+    <a *ngIf="!nav.external" mat-list-item [routerLink]="nav.link" routerLinkActive="active">
+      <mat-icon matListIcon>{{nav.icon}}</mat-icon>
+      <span matLine>{{nav.name}}</span>
+    </a>
+    <a *ngIf="nav.external" mat-list-item [href]="nav.link" target="_blank">
+      <mat-icon matListIcon>{{nav.icon}}</mat-icon>
+      <span matLine>{{nav.name}}</span>
+    </a>
+  </ng-container>
 </mat-nav-list>
