--- a/src/app/dashboard1/search/search.component.html
+++ b/src/app/dashboard1/search/search.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <h1 class="mat-headline">
     {{ 'Search' | translate }} "{{query$ | async}}"
   </h1>
