--- a/src/app/producer1/producer/producer.component.html
+++ b/src/app/producer1/producer/producer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <h1 class="mat-headline">
     {{ 'Producer' | translate }}
     <span *ngIf="producer$ | async as producer">{{producer.account?.name}}</span>
