--- a/src/app/producer1/producers/producers.component.scss
+++ b/src/app/producer1/producers/producers.component.scss
@@ -1,25 +1,3 @@
-.vote-progress {
-  display: block;
-  margin: 20px 0;
-  position: relative;
-  height: 24px;
-}
-
-.vote-progress .mat-progress-bar {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 100%;
-}
-
-.vote-progress span {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 100%;
-  line-height: 24px;
-  text-align: center;
-  color: #fff;
+.mat-row:nth-child(-n+21) {
+    background-color: #e8f5e9;   
 }
